# MMCPrivate

./: .gitignore  App.cs  ApplicationObjects.cs  AssemblyInfo.cs  CMakeLists.txt  ConsoleApp.sln  DicomImagePrivatePS.cs  Dump.cs  ImageAppData.cs  MMCPrivate.sln  Makefile  Other.cs  README.md  RoundTrip.cs  example.1003.json  example.100e.json  example.1021.json  example.102f.json  example.1050.json  example.10d7.json  sample1.raw  sample2.raw  simple.raw  template.nrb
ClassLibrary1/: ApplicationObjects.csproj  ClassLibrary1.csproj  ImageAppData.cs  StudyAppData.cs  StudyReservationInfo.cs
ClassLibrary2/: ApplicationObjects.csproj  ClassLibrary2.csproj  ImageAppData.cs
ClassLibrary3/: ClassLibrary3.csproj  ScanedCountInfo.cs  scanmanagement.csproj
ClassLibrary4/: ClassLibrary4.csproj  DicomImageCount.cs  DicomImagePrivatePS.cs  DicomSeriesCount.cs  Platform.DicomAccess.csproj  PrivateAnnotation.cs  PrivateBackgroundImage.cs  PrivateInsetPS.cs  PrivateMainPS.cs
ClassLibrary5/: BasePresentationState.cs  ClassLibrary5.csproj  Platform.DataObject.csproj
ClassLibrary6/: AslPerfusionPosition.cs  ClassLibrary6.csproj  GroupParamArchive.cs  Position.cs  PresatPlane.cs  QualityGuide.cs  Resolution.cs  ScanAdaptiveFilterParam.cs  ScanParamArchive.cs  ScanPosition.cs  SelectiveIRPosition.cs  ShimmingPosition.cs
ClassLibrary7/: InsetDisplayInformation.cs  InsetImageLocationType.cs  InsetImageSizeType.cs  InsetScrollIndex.cs  Visualization.csproj
ConsoleApp/: App.config  ConsoleApp.csproj  Program.cs
